--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <td>
-            <img src="images/Unes Image-modified.png" alt="Unes Profile Picture" height="150" width="150">
+            <img src="Images/Unes Image-modified.png" alt="Unes Profile Picture" height="150" width="150">
         </td>
         <td>
             <h1>Muhammad Unes</h1>
